--- a/apps/bookstack/config.json
+++ b/apps/bookstack/config.json
@@ -1,13 +1,13 @@
 {
   "$schema": "../schema.json",
-  "name": "Bookstack",
+  "name": "Pancho Bookstack",
   "available": true,
   "exposable": true,
   "port": 8119,
   "id": "bookstack",
   "tipi_version": 20,
   "version": "24.05.20240513",
-  "description": "BookStack is a simple, self-hosted, easy-to-use platform for organising and storing information. Default login: admin@admin.com password: password",
+  "description": "pancho BookStack is a simple, self-hosted, easy-to-use platform for organising and storing information. Default login: admin@admin.com password: password",
   "short_desc": "BookStack is a self-hosted platform for organising and storing information.",
   "author": "Dan Brown",
   "categories": [
